k8s/01-namespace-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gromo
  labels:
    name: gromo
    environment: production
